--- a/index.html
+++ b/index.html
@@ -35,6 +35,66 @@
             </div>
         </div>
     </nav>
+    <section id="profile">
+        <div class="class section__pic-container">
+            <img src="./assets/profile-pic.png" alt="Leandro Matos Profile Picture" />
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello, I'm</p>
+            <h1 class="title">Leandro</h1>
+            <p class="section__text__p2">Frontend Developer</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV
+                </button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info
+                </button>
+            </div>
+            <div id="socials-container">
+                <img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://linkedin.com/'">
+                <img src="./assets/github.png" alt="My Github Profile" class="icon" onclick="location.href='https://github.com/'">
+            </div>
+        </div>
+    </section>
+    <section id="about">
+        <p class="section__text__p1">Get to know more</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img 
+                    src="./assets/about-pic.png" 
+                    alt="Profile Picture" 
+                    class="about-pic"
+                />
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img 
+                            src="./assets/experience.png" 
+                            alt="Experience icon" 
+                            class="icon" 
+                        />
+                        <h3>Experience</h3>
+                        <p>2+ years <br/>Frontend Development</p>
+                    </div>
+                    <div class="details-container">
+                        <img 
+                        src="./assets/education.png" 
+                        alt="Education icon" 
+                        class="icon" 
+                    />
+                    <h3>Education</h3>
+                    <p>Tecn. Analysis and Systems Development<br/> PgDip Web Development</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda illo omnis, cumque optio ratione, id suscipit reiciendis minima molestias unde neque? Illo reiciendis ipsa provident officiis assumenda voluptas in omnis?</p>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience" 
+        />
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
