--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@
                 </div>
             </div>
         </div>
-        <img 
-            src="./assets/arrow.png" 
-            alt="Arrow icon" 
-            class="icon arrow" 
-            onclick="location.href='./#experience'" 
-        />
+        <a href="./#experience">
+            <img 
+                src="./assets/arrow.png" 
+                alt="Arrow icon" 
+                class="icon arrow" 
+            />
+        </a>
     </section>
     <section id="experience">
         <p class="section__text__p1">Explore My</p>
@@ -249,12 +250,13 @@
                 </div>
             </div>
         </div>
-        <img 
-            src="./assets/arrow.png" 
-            alt="Arrow icon" 
-            class="icon arrow" 
-            onclick="location.href='./#projects'" 
-        />
+        <a href="./#projects">
+            <img 
+                src="./assets/arrow.png" 
+                alt="Arrow icon" 
+                class="icon arrow" 
+            />
+        </a>
     </section>
     <section id="projects">
         <p class="section__text__p1">Browse My Recent</p>
@@ -335,12 +337,13 @@
                 </div>
             </div>
         </div>
-        <img 
-            src="./assets/arrow.png" 
-            alt="Arrow icon" 
-            class="icon arrow" 
-            onclick="location.href='./#projects'" 
-        />
+        <a href="./#contact">
+            <img 
+                src="./assets/arrow.png" 
+                alt="Arrow icon" 
+                class="icon arrow" 
+            />
+        </a>
     </section>
     <section id="contact">
         <p class="section__text__p1">Get in Touch</p>
