--- a/index.html
+++ b/index.html
@@ -45,29 +45,12 @@
             <h1 class="title">Leandro</h1>
             <p class="section__text__p2">Frontend Developer</p>
             <div class="btn-container">
-                <button 
-                    class="btn btn-color-2" 
-                    onclick="window.open('./assets/#')"
-                >
-                    Download CV
-                </button>
-                <button class="btn btn-color-1" onclick="location.href='./#contact'">
-                    Contact Info
-                </button>
+                <a href="./assets/#"><button class="btn btn-color-2">Download CV</button></a>
+                <a href="./#contact"><button class="btn btn-color-1">Contact Info</button></a>
             </div>
             <div id="socials-container">
-                <img 
-                src="./assets/linkedin.png" 
-                alt="My LinkedIn Profile" 
-                class="icon" 
-                onclick="location.href='https://www.linkedin.com/in/matosleandro/'" 
-                />
-                <img 
-                src="./assets/github.png" 
-                alt="My Github Profile" 
-                class="icon" 
-                onclick="location.href='https://github.com/matosleandro'" 
-                />
+                <a href="https://www.linkedin.com/in/matosleandro/"><img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon" /></a>
+                <a href="https://github.com/matosleandro"><img src="./assets/github.png" alt="My Github Profile" class="icon" /></a>
             </div>
         </div>
     </section>
@@ -273,18 +256,8 @@
                     </div>
                     <h2 class="experience-sub-title project-title">Project One</h2>
                     <div class="btn-container">
-                        <button 
-                            class="btn btn-color-2 project-btn" 
-                            onclick="location.href='https://github.com/'"
-                        >
-                            Github
-                        </button>
-                        <button 
-                            class="btn btn-color-2 project-btn" 
-                            onclick="location.href='https://github.com/'"
-                        >
-                            Live Demo
-                        </button>
+                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Github</button></a>
+                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Live Demo</button></a>
                     </div>
                 </div>
                 <div class="details-container color-container">
@@ -297,18 +270,8 @@
                     </div>
                     <h2 class="experience-sub-title project-title">Project Two</h2>
                     <div class="btn-container">
-                        <button 
-                            class="btn btn-color-2 project-btn" 
-                            onclick="location.href='https://github.com/'"
-                        >
-                            Github
-                        </button>
-                        <button 
-                            class="btn btn-color-2 project-btn" 
-                            onclick="location.href='https://github.com/'"
-                        >
-                            Live Demo
-                        </button>
+                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Github</button></a>
+                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Live Demo</button></a>
                     </div>
                 </div>
                 <div class="details-container color-container">
@@ -321,18 +284,8 @@
                     </div>
                     <h2 class="experience-sub-title project-title">Project Three</h2>
                     <div class="btn-container">
-                        <button 
-                            class="btn btn-color-2 project-btn" 
-                            onclick="location.href='https://github.com/'"
-                        >
-                            Github
-                        </button>
-                        <button 
-                            class="btn btn-color-2 project-btn" 
-                            onclick="location.href='https://github.com/'"
-                        >
-                            Live Demo
-                        </button>
+                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Github</button></a>
+                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Live Demo</button></a>
                     </div>
                 </div>
             </div>
