--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             <h1 class="title">Leandro</h1>
             <p class="section__text__p2">Frontend Developer</p>
             <div class="btn-container">
-                <a href="./assets/#"><button class="btn btn-color-2">Download CV</button></a>
-                <a href="./#contact"><button class="btn btn-color-1">Contact Info</button></a>
+                <a href="./assets/#" target="_blank" class="btn btn-color-2" >Download CV</a>
+                <a href="./#contact" class="btn btn-color-1">Contact Info</a>
             </div>
             <div id="socials-container">
-                <a href="https://www.linkedin.com/in/matosleandro/"><img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon" /></a>
-                <a href="https://github.com/matosleandro"><img src="./assets/github.png" alt="My Github Profile" class="icon" /></a>
+                <a href="https://www.linkedin.com/in/matosleandro/" target="_blank"><img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon" /></a>
+                <a href="https://github.com/matosleandro" target="_blank"><img src="./assets/github.png" alt="My Github Profile" class="icon" /></a>
             </div>
         </div>
     </section>
@@ -256,8 +256,8 @@
                     </div>
                     <h2 class="experience-sub-title project-title">Project One</h2>
                     <div class="btn-container">
-                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Github</button></a>
-                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Live Demo</button></a>
+                        <a href="https://github.com/" target="_blank" class="btn btn-color-2 project-btn">Github</a>
+                        <a href="https://github.com/" target="_blank" class="btn btn-color-2 project-btn">Live Demo</a>
                     </div>
                 </div>
                 <div class="details-container color-container">
@@ -270,8 +270,8 @@
                     </div>
                     <h2 class="experience-sub-title project-title">Project Two</h2>
                     <div class="btn-container">
-                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Github</button></a>
-                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Live Demo</button></a>
+                        <a href="https://github.com/" target="_blank" class="btn btn-color-2 project-btn">Github</a>
+                        <a href="https://github.com/" target="_blank" class="btn btn-color-2 project-btn">Live Demo</a>
                     </div>
                 </div>
                 <div class="details-container color-container">
@@ -284,8 +284,8 @@
                     </div>
                     <h2 class="experience-sub-title project-title">Project Three</h2>
                     <div class="btn-container">
-                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Github</button></a>
-                        <a href="https://github.com/"><button class="btn btn-color-2 project-btn">Live Demo</button></a>
+                        <a href="https://github.com/" target="_blank" class="btn btn-color-2 project-btn">Github</a>
+                        <a href="https://github.com/" target="_blank" class="btn btn-color-2 project-btn">Live Demo</a>
                     </div>
                 </div>
             </div>
@@ -308,7 +308,7 @@
                     alt="Email icon" 
                     class="icon contact-icon email-icon" 
                 />
-                <p><a href="mailto:leandro.matos@live.com">leandro.matos@live.com</a></p>
+                <p><a href="mailto:leandro.matos@live.com" target="_blank">leandro.matos@live.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img 
@@ -316,7 +316,7 @@
                     alt="LinkedIn icon" 
                     class="icon contact-icon"
                 />
-                <p><a href="https://www.linkedin.com/in/matosleandro/">LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/matosleandro/" target="_blank">LinkedIn</a></p>
             </div>
         </div>
     </section>
